- reformat ivy.xml files

--- a/ivy.xml
+++ b/ivy.xml
@@ -1,11 +1,11 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="ISO-8859-1"?>
 <ivy-module
  version="2.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:noNamespaceSchemaLocation="http://ant.apache.org/ivy/schemas/ivy.xsd"
 >
   <info
-   organisation="net.xp_forge" 
+   organisation="net.xp_forge"
    module="apidoc"
    status="integration"
    revision="1.0.2"
@@ -15,7 +15,12 @@
     <conf name="compile" description="Compilation phase"/>
   </configurations>
   <publications>
-    <artifact name="apidoc" ext="xar" type="xar" conf="compile"/>
+    <artifact
+     name="apidoc"
+     ext="xar"
+     type="xar"
+     conf="compile"
+    />
   </publications>
   <dependencies>
     <dependency
@@ -23,7 +28,7 @@
      name="core"
      rev="latest.integration"
      revConstraint="[5.8,5.9["
-     conf="*->default"
+     conf="*-&gt;default"
     />
   </dependencies>
 </ivy-module>
