--- a/ivy.xml
+++ b/ivy.xml
@@ -8,7 +8,7 @@
    organisation="net.xp_forge"
    module="apidoc"
    status="integration"
-   revision="1.0.2"
+   revision="1.0.3"
   />
   <configurations>
     <conf name="default" description="Runtime"/>
@@ -26,8 +26,7 @@
     <dependency
      org="net.xp_framework"
      name="core"
-     rev="latest.integration"
-     revConstraint="[5.8,5.9["
+     rev="[5.8,5.9["
      conf="*-&gt;default"
     />
   </dependencies>
